jlatexmath (1.0.6)
	* Add \qquad as a Java macro rather than a String definition

	* Fix an issue with predefined string commands with a RowAtom (\qquad used two times)

jlatexmath (1.0.5)
	* Remove ligatures info for cyrillic

	* Add italic correction only in math mode.

	* Add a command \mathnormal.

	* Float.MIN_VALUE is not -Float.MAX_VALUE !

	* Italic correction was not taken into account when making box for a CharSymbol.

	* Support ~ as non breakable space.

jlatexmath (1.0.4)
	* Fix color displayed with the command bgcolor.

	* Add the linking exception to the license

jlatexmath (1.0.3)
	* Pound sign was invalid in roman font.

	* Fix paths in MANIFEST.MF

	* By default, slightly increase left and right insets.

	* Allow use of # in code.

        * Add macro \fcscore.

        * CharBox not correctly drawn in multithread context

        * Add macros \texteuro and \euro ( and map char &#8364; on \euro)

	* Add macro \st (i.e. strike-through)

	* Fix arrow shift in \overrightarrow macro

	* Fix several bugs due to modification in VRowAtom.

jlatexmath (1.0.2)
       	* Fix for ticket 1113: by default interline is 1ex (can be set with TeXIconBuilder::setInterLineSpacing (see Example7))

	* Fix bug with maxwidth.

        * Use default Java font when char is in an unknown unicode block.

        * Fix bug in \LaTeX (due to modification of EM value)

        * Fix bug in parser when no chars after command \cr

        * Add missing glyph in jlm_cmex10.ttf (char 183)

	* jlatexmath-minimal.zip renamed to jlatexmath-minimal-${version}.zip

jlatexmath (1.0.1)
	* Negative spaces were not taken into accound at the end of a horizontal
          box.

        * Add command \Join.

        * Fix bad space around \begin{array}...\end{array}

        * There were no spaces around fraction (\nulldelimiterspace).

        * Eat one white (if it exists) after a \cr.

        * Color name must not be case sensitive
