@@ -160,6 +160,12 @@ public class SpaceAtom extends Atom {
             public float getPixelConversion(TeXEnvironment env) {
                 return (12.7924193070f * TeXFormula.PIXELS_PER_POINT) / env.getSize();
             }
+        },
+        
+        new UnitConversion() {//X8
+            public float getPixelConversion(TeXEnvironment env) {
+                return env.getTeXFont().getDefaultRuleThickness(env.getStyle());
+            }
         }
     };
 
