@@ -349,4 +349,11 @@ public class TeXConstants {
      * 1 in = 72 point
      */
    public static final int UNIT_CC = 12;
+
+    /**
+     * Unit constant: x8
+     * <p>
+     * 1 s8 = 1 default rule thickness
+     */
+   public static final int UNIT_X8 = 13;
 }
